--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-moca-test",
+  "name": "my-mova-test",
   "version": "0.0.1",
-  "description": "A MOCA test",
-  "productName": "MOCA test",
+  "description": "A MOVA test",
+  "productName": "MOVA test",
   "author": "Henrique F. Miranda <h.miranda20@outlook.com>",
   "private": true,
   "scripts": {
