--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -1,6 +1,6 @@
 {
   "name": "org.cordova.quasar.app",
-  "displayName": "MOCA test",
+  "displayName": "MOVA",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
@@ -19,6 +19,9 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {}
-    }
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
